bootstrap + connexion/déconnexion

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
-<head>
+<!DOCTYPE html>
+
+<html>
+
+  <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="assets/css/login_style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="bootstrap/css/bootstrap.min.css"> 
+    <link rel="stylesheet" href="assets/css/login_style.css">
     <title>Connexion</title>
   </head>
 
@@ -12,3 +18,5 @@
         <input type="submit" value="Login" />
       </form>
   </body>
+
+</html>
